# jupyter-ai-claude-code

./: .gitignore  CHANGELOG.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: check-release.yml
src/jupyter_ai_claude_code/: __init__.py  persona.py  templates.py
