[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-ai-claude-code"
version = "0.1.0"
description = "Jupyter AI integration with Claude Code"
authors = [
    {name = "Brian E. Granger", email = "ellisonbg@gmail.com"},
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "jupyter-ai-persona-manager",
    "claude-code-sdk",
    "jupyter_server_documents",
]

[project.entry-points."jupyter_ai.personas"]
claude_code = "jupyter_ai_claude_code.persona:ClaudeCodePersona"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_ai_claude_code"]

[tool.hatch.build.targets.wheel.force-include]
"src/jupyter_ai_claude_code/static" = "jupyter_ai_claude_code/static"